--- a/buddy-api/tsconfig.json
+++ b/buddy-api/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "strict": true,
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "rootDir": ".",
+    "outDir": "dist",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "outDir": "dist"
+    "strict": true,
+    "skipLibCheck": true
   },
-  "include": ["**/*.ts"]
+  "include": ["index.ts"]
 }
